--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,25 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/CSS/home.css" />
+    <link rel="icon" href="Logo.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-  </head>
-  <body>
-   
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <!-- header Design -->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-none">
+      <div class="container">
+        <a class="navbar-brand mx-auto" href="#">
+          <img
+            src="/Logo.png"
+            alt="Logo"
+            width="100"
+            height="100"
+            class="d-inline-block align-text-top"
+          />
+        </a>
+        <h2 class="mt-3">Vcare</h2>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active fw-medium" aria-current="page" href="#" >Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active  fw-medium" aria-current="page" href="#"
+                >Services</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active  fw-medium" aria-current="page" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+        <a href="#" class="Login-button  fw-medium">Login</a>
+      </div>
+    </nav>
+
+    <section class="part-section">
+      <div class="container">
+        <div class="row g-5">
+          <div class="d-flex align-items-center justify-content-center">
+            <div class="col-12 col-lg-6">
+              <h1 class="ms-5 mt-4 lh-sm">Welcome to <br>Vcare</h1>
+              <p class="p px-5 fw-medium">Find your doctor and make an <br>appoinment</p>
+              <button type="submit" class="btn btn-primary w-50 mt-3 ms-5 rounded-5 shadow ">
+                Book an Appoinment
+              </button>
+            </div>
+            <div class="col-12 col-lg-6">
+              <div class="section-img d-flex justify-content-end mt-2">
+                <img src="doctors.png" alt="Doctor" class="hero-img">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
-    <script 
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </header>
+ 
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous">
+</script>
+</body>
 </html>
+
+
+    <!-- <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+            <h1 class="big-text mt-5 px-5">Welcome to <br>Vcare</h1>
+            <p class="p px-5">Find your doctor and make an <br>appoinment</p>
+             <a href="#" class="btn btn-frist w-50 rounded-5">Book an Appoinment</a> -->
+            <!-- <button type="submit" class="btn btn-primary w-50 mt-3 rounded-5 shadow px-5">
+              Book an Appoinment
+            </button>
+        </div>
+        <div class="col-sm-6">
+            <img src="doctors.png" alt=" Smily Doctor" class="img-responsive" width="750px">
+        </div>
+      </div>
+    </div> -->
