--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <a class="navbar-brand mx-auto" href="#">
           <img
-            src="/Logo.png"
+            src="/Images/Logo.png"
             alt="Logo"
             width="100"
             height="100"
@@ -73,7 +73,7 @@
             </div>
             <div class="col-12 col-lg-6">
               <div class="section-img d-flex justify-content-end mt-2">
-                <img src="doctors.png" alt="Doctor" class="hero-img">
+                <img src="/Images/phy ap.jpg" alt="Doctor" class="hero-img" width="100%">
               </div>
             </div>
           </div>
@@ -92,20 +92,3 @@
 </script>
 </body>
 </html>
-
-
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-            <h1 class="big-text mt-5 px-5">Welcome to <br>Vcare</h1>
-            <p class="p px-5">Find your doctor and make an <br>appoinment</p>
-             <a href="#" class="btn btn-frist w-50 rounded-5">Book an Appoinment</a> -->
-            <!-- <button type="submit" class="btn btn-primary w-50 mt-3 rounded-5 shadow px-5">
-              Book an Appoinment
-            </button>
-        </div>
-        <div class="col-sm-6">
-            <img src="doctors.png" alt=" Smily Doctor" class="img-responsive" width="750px">
-        </div>
-      </div>
-    </div> -->
