--- a/HTML/appoinment.html
+++ b/HTML/appoinment.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <!-- header Design -->
+  <!-- header Design --> <!--Logo name font size milauna parxa header section ma-->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-none">
       <div class="container">
@@ -48,54 +48,178 @@
 
   <main>
     <div class="container">
-      <div class="row justify-content-between">
-        <div class="col-md-6">
-          <div class="custom-box rounded-5">
-            <img src="image1.jpg" alt="Image 1">
-            <p>Details for Box 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <!--First Row-->
+      <div class="row justify-content-evenly">
+        <div class="col-md-5">
+          <div class="card mb-3 card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+            <!--Shadow and Maxwidth given-->
+            <div class="row g-3">
+              <div class="col-md-4">
+                <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+              </div>
+              <div class="col-md-5">
+                <div class="card-body">
+                  <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="custom-box rounded-5">
-            <img src="image2.jpg" alt="Image 2">
-            <p>Details for Box 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="card mb-3 card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+          <!--Shadow and Maxwidth given-->
+          <div class="row g-3">
+            <div class="col-md-4">
+              <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+            </div>
+            <div class="col-md-5">
+              <div class="card-body">
+                <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-md-6 rounded-5">
-          <div class="custom-box">
-            <img src="image3.jpg" alt="Image 3">
-            <p>Details for Box 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <!--Second Row-->
+      <div class="row justify-content-evenly">
+        <div class="col-md-5">
+          <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+            <!--Shadow and Maxwidth given-->
+            <div class="row g-3">
+              <div class="col-md-4">
+                <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+              </div>
+              <div class="col-md-5">
+                <div class="card-body">
+                  <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="custom-box rounded-5">
-            <img src="image4.jpg" alt="Image 4">
-            <p>Details for Box 4 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+          <!--Shadow and Maxwidth given-->
+          <div class="row g-3">
+            <div class="col-md-4">
+              <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+            </div>
+            <div class="col-md-5">
+              <div class="card-body">
+                <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-md-6">
-          <div class="custom-box rounded-5">
-            <img src="image5.jpg" alt="Image 5">
-            <p>Details for Box 5 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <!--Third Row-->
+      <div class="row justify-content-evenly">
+        <div class="col-md-5">
+          <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+            <!--Shadow and Maxwidth given-->
+            <div class="row g-3 ">
+              <div class="col-md-4">
+                <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+              </div>
+              <div class="col-md-5 ">
+                <div class="card-body">
+                  <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="custom-box rounded-5">
-            <img src="image5.jpg" alt="Image 5">
-            <p>Details for Box 5 Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+          <!--Shadow and Maxwidth given-->
+          <div class="row g-3">
+            <div class="col-md-4">
+              <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+            </div>
+            <div class="col-md-5">
+              <div class="card-body">
+                <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Fourth Row-->
+      <div class="row justify-content-evenly">
+        <div class="col-md-5">
+          <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+            <!--Shadow and Maxwidth given-->
+            <div class="row g-3">
+              <div class="col-md-4">
+                <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+              </div>
+              <div class="col-md-5">
+                <div class="card-body">
+                  <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                  <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 500px">
+          <!--Shadow and Maxwidth given-->
+          <div class="row g-3">
+            <div class="col-md-4">
+              <img src="/Images/appoinmentDoctors.png" class="img-fluid rounded-circle" alt="">
+            </div>
+            <div class="col-md-5">
+              <div class="card-body">
+                <h6 class="card-title">Mr Dipesh Mahat</h6> <!--Should be changed-->
+                <p class="card-text fs-6 fw-normal"> Computerlogist</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-medium"> Experience: 5 years</p> <!--Should be changed-->
+                <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </main>
 
+  <!--Apply design for user and doctor-->
 
+  <div class="upperFooter container-fluid  mt-5 mb-5">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="text-center text-white fs-3">
+          Become our Health partner
+        </div>
+        <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
+      </div>
+      <div class="col-md-6">
+        <div class="text-center text-white fs-3">
+          Become our doctor
+        </div>
+        <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
+      </div>
+    </div>
+  </div>
 
   <!--Footer Design-->
   <footer>
@@ -106,13 +230,13 @@
           <div class="d-flex justify-content-between">
             <p class="fs-6 py-2 mt-2">Get connected with us on Social networks:</p>
             <div class="d-flex justify-content-end align-items-center">
-                
-                <img src="/Images/facebook.png" alt="Facebook Icon" width="32" height="32" class="me-2 rounded-circle">
-                <img src="/Images/twitter.png" alt="Twitter Icon" width="32" height="32" class="me-2 rounded-circle">
-                <img src="/Images/Linkedin.png" alt="Linkedin Icon" width="32" height="32" class="me-2 rounded-circle">
-                <img src="/Images/instagram.png" alt="Instagram Icon" width="32" height="32" class="me-2 rounded-circle">
-      
-              </div>
+
+              <img src="/Images/facebook.png" alt="Facebook Icon" width="32" height="32" class="me-2 rounded-circle">
+              <img src="/Images/twitter.png" alt="Twitter Icon" width="32" height="32" class="me-2 rounded-circle">
+              <img src="/Images/Linkedin.png" alt="Linkedin Icon" width="32" height="32" class="me-2 rounded-circle">
+              <img src="/Images/instagram.png" alt="Instagram Icon" width="32" height="32" class="me-2 rounded-circle">
+
+            </div>
           </div>
         </div>
         <!-- </div> -->
@@ -156,6 +280,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
-</body>
 
+</body>
 </html>
