--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -121,7 +121,7 @@
 
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-light w-75 mt-3 rounded-5 fs-5">
-                <img src="/Images/Google.png" width="30px" alt="" /> Sign in
+                <img src="/Images/GoogleLogo.png" width="30px" alt="" /> Sign in
                 with google
               </button>
             </div>
