--- a/HTML/Hospital.html
+++ b/HTML/Hospital.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="icon" href="Logo.png">
+  <title>Hospital</title>
+  <link rel="icon" href="/Images/Logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/CSS/Hospital.css">
@@ -56,7 +56,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>        <!--<div class="card-body d-flex justify-content-center"> fro button align to center-->
+              <a href="#" class="btn btn-dark">Book Appoinment</a>        
             </div>
           </div>
         </div>
@@ -152,18 +152,22 @@
   <!--Apply design for user and doctor-->
 
   <div class="upperFooter container-fluid  mt-5 mb-5">
-    <div class="row">
-      <div class="col-md-6">
+    <div class="d-flex justify-content-evenly">
+      <div class="d-flex flex-column mt-5">
         <div class="text-center text-white fs-3">
           Become our Health partner
         </div>
+        <div class="w-50 mt-3">
         <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
       </div>
-      <div class="col-md-6">
+      </div>
+      <div class="d-flex flex-column mt-5">
         <div class="text-center text-white fs-3">
           Become our doctor
         </div>
+        <div class="w-75 mt-3">
         <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
+        </div>
       </div>
     </div>
   </div>
