--- a/HTML/appoinment.html
+++ b/HTML/appoinment.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="icon" href="Logo.png">
+  <title>Appoinment</title>
+  <link rel="icon" href="/Images/Logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/CSS/Appoinment.css">
@@ -47,6 +47,27 @@
   </header>
 
   <main>
+    
+    <!-- <div class="container mb-5 ">
+      <div class="row">
+        <div class="col ">
+          <img src="/Images/doctor.png" alt="">
+        </div>
+        <div class="col d-flex justify-content-between align-items-center">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Select Your Concerns
+            </button>
+            <ul class="dropdown-menu"> -->
+              <!-- <li><a class="dropdown-item" href="#"></a></li>            Concerns Rakn na baki
+              <li><a class="dropdown-item" href="#"></a></li>                 Concerns Rakn na baki 
+              <li><a class="dropdown-item" href="#"></a></li>                 Concerns Rakn na baki
+             </ul>
+          </div>
+        </div>
+      </div>
+    </div> 
+    
     <div class="container">
       <!--First Row-->
       <div class="row justify-content-evenly">
@@ -205,21 +226,26 @@
   <!--Apply design for user and doctor-->
 
   <div class="upperFooter container-fluid  mt-5 mb-5">
-    <div class="row">
-      <div class="col-md-6">
+    <div class="d-flex justify-content-evenly">
+      <div class="d-flex flex-column mt-5">
         <div class="text-center text-white fs-3">
           Become our Health partner
         </div>
+        <div class="w-50 mt-3">
         <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
       </div>
-      <div class="col-md-6">
+      </div>
+      <div class="d-flex flex-column mt-5">
         <div class="text-center text-white fs-3">
           Become our doctor
         </div>
+        <div class="w-75 mt-3">
         <button class="btn btn-danger fw-semibold fs-5">Apply Now</button>
+        </div>
       </div>
     </div>
   </div>
+
 
   <!--Footer Design-->
   <footer>
