--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="icon" href="/Images/Logo.png">
     <link rel="stylesheet" href="/CSS/signUp.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
