--- a/HTML/index.html
+++ b/HTML/index.html
@@ -50,10 +50,12 @@
             <div class="col-12 col-lg-6">
               <h1 class="ms-5 mt-4 lh-sm">Welcome to <br>Vcare</h1>
               <p class="p px-5 fw-medium">Find your doctor and make an <br>appoinment</p>
+              <a href="/HTML/appoinment.html">
               <button type="submit" class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow ">
                 <!--Change of class btn to bttn-->
                 Book an Appoinment
               </button>
+            </a>
             </div>
             <div class="col-12 col-lg-6">
               <div class="section-img d-flex justify-content-end mt-2">
