BMI Changes, Home Page changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,7 @@
             </li>
           </ul>
         </div>
-        <a href="#" class="Login-button  fw-medium">Login</a>
+        <a href="/HTML/Login.html" class="Login-button  fw-medium">Login</a>
       </div>
     </nav>
 
@@ -48,8 +48,8 @@
         <div class="row g-5">
           <div class="d-flex align-items-center justify-content-center">
             <div class="col-12 col-lg-6">
-              <h1 class="ms-5 mt-4 lh-sm">Welcome to <br>Vcare</h1>
-              <p class="p px-5 fw-medium">Find your doctor and make an <br>appoinment</p>
+              <h1 class="ms-5 mt-4 lh-sm">WELCOME TO <br> VCARE</h1>
+              <p class="p px-5">Find your doctor and make an <br>appoinment</p>
               <a href="/HTML/appoinment.html">
               <button type="submit" class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow ">
                 <!--Change of class btn to bttn-->
@@ -71,12 +71,12 @@
   
   <main>
     <!--Our Service-->
-    <div class="Our Service pt-5" id="Service">
+    <div class="Our Service pt-4" id="Service">
       <div class="Our-service container">
         <h2 class="text-dark fw-bold text-center pb-5 lh-base">Our Services</h2>
       </div>
 
-      <div class="container py-5">
+      <div class="container py-2">
         <div class="row">
           <div class=" col-md-3">
             <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
@@ -126,14 +126,15 @@
     
         </div>
         <div class="col-12 col-lg-7">
-          <h4 class="fw-bold fs-4 mb-3">Calculate Your BMI for a Healthier<br> You</h4>
+          <h4 class="fw-bold fs-4 mb-3">Calculate your BMI for a healthier you</h4>
           <p class="fs-6">Track your progress towards a healthier lifestyle.<br><br>
             BMI a screening tool used to estimate body fat based on your height and weight.<br><br>
             BMI can be a quick and easy way to get a general idea of your weight-to-height ratio. It can also be used to
             track changes over time and identify potential health risks.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <a href="/HTML/bmi.html">
             <button type="button" class="btn btn-dark me-2 mt-5">Calculate BMI</button>
-            
+          </a>
           </div>
         </div>
       </div>
