--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -12,7 +12,6 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="signUp.css" />
   </head>
 
   <body>
@@ -79,7 +78,7 @@
             </div>
             <div class="form-group mb-2 ">
               <input
-                type="number"
+                type="text"
                 class="form-control rounded-4 px-3"
                 id="number"
                 placeholder="Phone Number"
@@ -108,36 +107,27 @@
               <input
                 type="password"
                 class="form-control rounded-4 px-3"
-                id="Re-password"
+                id="confirm-password"
                 placeholder="Confirm Password"
                 required
               />
             </div>
 
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-primary w-75 mt-3 rounded-5 fs-5">
+              <button type="button" class="btn btn-primary w-75 mt-3 rounded-5 fs-5" id="signUpBtn">
                 Sign Up
-              </button>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-light w-75 mt-3 rounded-5 fs-5">
-                <img src="/Images/GoogleLogo.png" width="30px" alt="" /> Sign in
-                with google
               </button>
             </div>
           </form>
           <h6 class="text-center mt-4">Already have a account? <a href="#">Login</a</h6>
         </div>
     
-        <div class="col-md-6">     <!-- d-flex justify-content-end for image on right -->
           <img
             src="/Images/Medicine.png"
             class="img rounded-4"
             alt="Medical Image"
            width="100%"
           />
-        </div>
       </div>
     </div>
 
@@ -146,5 +136,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
+    <script src="/JS/signup.js"></script>
   </body>
 </html>
