--- a/HTML/Hospital.html
+++ b/HTML/Hospital.html
@@ -40,7 +40,7 @@
           </ul>
         </div>
         <!-- <a href="#" class="Login-button  fw-medium">Login</a> -->
-        <img src="/Images/profile-user.png" alt="Logo" width="50" height="50" class="user d-inline-block">
+        <img src="/Images/profile-user.png" alt="Logo" width="25" height="25" class="user d-inline-block">
       </div>
     </nav>
 
@@ -151,7 +151,7 @@
   </main>
   <!--Apply design for user and doctor-->
 
-  <div class="upperFooter container-fluid  mt-5 mb-5">
+  <div class="upperFooter container-fluid  mt-5 mb-4">
     <div class="d-flex justify-content-evenly">
       <div class="d-flex flex-column mt-5">
         <div class="text-center text-white fs-3">
@@ -174,49 +174,109 @@
 
   <!--Footer Design-->
   <footer>
-    <div class="social-connect bg-primary text-white text-center rounded-top-3">
+    <div
+      class="social-connect bg-primary text-white text-center rounded-top-3"
+    >
       <div class="container">
         <div class="row">
-          <!-- <div class="col-12 col-md-6"> -->
           <div class="d-flex justify-content-between">
-            <p class="fs-6 py-2 mt-2">Get connected with us on Social networks:</p>
+            <p class="fs-6 py-2 mt-2">
+              Get connected with us on Social networks:
+            </p>
             <div class="d-flex justify-content-end align-items-center">
-
-              <img src="/Images/facebook.png" alt="Facebook Icon" width="32" height="32" class="me-2 rounded-circle">
-              <img src="/Images/twitter.png" alt="Twitter Icon" width="32" height="32" class="me-2 rounded-circle">
-              <img src="/Images/Linkedin.png" alt="Linkedin Icon" width="32" height="32" class="me-2 rounded-circle">
-              <img src="/Images/instagram.png" alt="Instagram Icon" width="32" height="32" class="me-2 rounded-circle">
-
+              <a href="#">
+              <img
+                src="/Images/facebook.png"
+                alt="Facebook Icon"
+                width="32"
+                height="32"
+                class="me-2 rounded-circle"
+              />
+            </a>
+              <a href="#">
+              <img
+                src="/Images/Linkedin.png"
+                alt="Linkedin Icon"
+                width="32"
+                height="32"
+                class="me-2 rounded-circle"
+              />
+            </a>
+              <a href="#">
+              <img
+                src="/Images/instagram.png"
+                alt="Instagram Icon"
+                width="32"
+                height="32"
+                class="me-2 rounded-circle"
+              />
+            </a>
             </div>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </div>
 
     <footer class="bg-dark text-white pt-5 pb-4">
-
-      <div class="container ">
+      <div class="container">
         <div class="row">
           <div class="col-12 col-md-4">
-            <img src="/Images/Logo.png" alt="Logo" width="100" height="100" class="align-middle mb-2">
+            <img
+              src="/Images/Logo.png"
+              alt="Logo"
+              width="100"
+              height="100"
+              class="align-middle mb-2"
+            />
             <span class="fs-5 fw-bold">Vcare</span>
           </div>
           <div class="col-12 col-md-4 text-center">
             <h5 class="mb-3">Our Services</h5>
             <ul class="list-unstyled py-1">
-              <li><a href="#" class="text-decoration-none text-white">Older Medicine</a></li>
-              <li><a href="#" class="text-decoration-none text-white">Online Appoinment</a></li>
-              <li><a href="#" class="text-decoration-none text-white">Physical Appoinment</a></li>
-              <li><a href="#" class="text-decoration-none text-white">Medical Records</a></li>
+              <li>
+                <a href="/HTML/Medicine.html" class="text-decoration-none text-white"
+                  >Medicine</a
+                >
+              </li>
+              <li>
+                <a href="/HTML/appoinment.html" class="text-decoration-none text-white"
+                  >Online Appoinment</a
+                >
+              </li>
+              <li>
+                <a href="/HTML/Hospital.html" class="text-decoration-none text-white"
+                  >Physical Appoinment</a
+                >
+              </li>
+              <li>
+                <a href="/HTML/History.html" class="text-decoration-none text-white"
+                  >Medical Records</a
+                >
+              </li>
             </ul>
           </div>
           <div class="col-12 col-md-4 text-end">
             <h4 class="mb-3">Contact Us</h4>
-            <p class="fs-6"><img src="/Images/mail.png" alt="Email Icon" width="16" height="16" class="me-2">
-              Email: info@vare.com</p>
-            <p class="fs-6"><img src="/Images/phone.png" alt="Phone Icon" width="20" height="20" class="">
-              Phone: +01 97667676</p>
+            <p class="fs-6">
+              <img
+                src="/Images/mail.png"
+                alt="Email Icon"
+                width="16"
+                height="16"
+                class="me-2"
+              />
+              Email: info@vare.com
+            </p>
+            <p class="fs-6">
+              <img
+                src="/Images/phone.png"
+                alt="Phone Icon"
+                width="20"
+                height="20"
+                class=""
+              />
+              Phone: +01 97667676
+            </p>
           </div>
         </div>
       </div>
