--- a/HTML/Medicine.html
+++ b/HTML/Medicine.html
@@ -50,7 +50,7 @@
                 </li>
              </ul>
         </div>
-        <img src="/Images/profile-user.png" alt="Logo" width="40" height="40" class="user d-inline-block">
+        <img src="/Images/profile-user.png" alt="Logo" width="25" height="25" class="user d-inline-block">
       </div>
     </nav>
     <div class="Medicine container d-flex justify-content-center align-items-center rounded-5">
@@ -62,7 +62,7 @@
 
   
   <main>
-        <div class="container mb-5 mt-4">
+        <div class="container mb-5 mt-5">
           <!--First Row-->
           <div class="row gy-3">
             <div class="col-sm-6 col-md-4 col-lg-3">
@@ -242,13 +242,19 @@
       </div>
       <div class="row">
         <div class="col">
+          <a href="">
           <img src="/Images/esewa.png" alt="Image  1" class="img-fluid py-5">
+        </a>
         </div>
         <div class="col">
+          <a href="">
           <img src="/Images/imepay.png" alt="Image  2" class="img-fluid py-0">
+        </a>
         </div>
         <div class="col">
+          <a href="">
           <img src="/Images/khalti.png" alt="Image  3" class="img-fluid py-5">
+        </a>
         </div>
       </div>
     </div>
