--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-  <!-- header Design -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-none">
       <div class="container">
@@ -39,7 +38,19 @@
             </li>
           </ul>
         </div>
-        <a href="/HTML/Login.html" class="Login-button  fw-medium">Login</a>
+        <a href="/HTML/Login.html" class="Login-button fw-medium">Login</a>
+
+        <!-- <div class="mx-2">
+          <img id="settingsIcon" src="/Images/cogwheel.png" width="30" height="30" alt="">
+          <div id="dropdownMenu" class="dropdown-menu" style="display: none;">
+            <button id="darkModeToggleBtn">Dark Mode</button>
+          </div>
+        </div> -->
+        
+        <!-- <div class="dark-mode-toggle">
+          <button id="darkModeToggleBtn">Dark</button>
+        </div> -->
+
       </div>
     </nav>
 
@@ -199,5 +210,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
+
+    <script src="/JS/darkMode.js"></script>
+
 </body>
 </html>
