--- a/HTML/index.html
+++ b/HTML/index.html
@@ -181,7 +181,7 @@
                   <h4 class="card-title">Trace your medical history</h4>
                   <a href="/HTML/History.html">
                     <button type="button" class="btn btn-dark">View</button>
-                </a>
+                  </a>
                 </div>
               </div>
             </div>
@@ -213,15 +213,17 @@
               time and identify potential health risks.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+              <a href="/HTML/bmi.html">
               <button type="button" class="btn btn-dark me-2 mt-5">
                 Calculate BMI
               </button>
+            </a>
             </div>
           </div>
         </div>
       </div>
     </main>
-      <!--Footer Section-->
+    <!--Footer Section-->
     <footer>
       <div
         class="social-connect bg-primary text-white text-center rounded-top-3"
@@ -234,32 +236,32 @@
               </p>
               <div class="d-flex justify-content-end align-items-center">
                 <a href="#">
-                <img
-                  src="/Images/facebook.png"
-                  alt="Facebook Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/facebook.png"
+                    alt="Facebook Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
                 <a href="#">
-                <img
-                  src="/Images/Linkedin.png"
-                  alt="Linkedin Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/Linkedin.png"
+                    alt="Linkedin Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
                 <a href="#">
-                <img
-                  src="/Images/instagram.png"
-                  alt="Instagram Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/instagram.png"
+                    alt="Instagram Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
               </div>
             </div>
           </div>
@@ -283,22 +285,30 @@
               <h5 class="mb-3">Our Services</h5>
               <ul class="list-unstyled py-1">
                 <li>
-                  <a href="/HTML/Medicine.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/Medicine.html"
+                    class="text-decoration-none text-white"
                     >Medicine</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/appoinment.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/appoinment.html"
+                    class="text-decoration-none text-white"
                     >Online Appoinment</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/Hospital.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/Hospital.html"
+                    class="text-decoration-none text-white"
                     >Physical Appoinment</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/History.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/History.html"
+                    class="text-decoration-none text-white"
                     >Medical Records</a
                   >
                 </li>
