--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="icon" href="/Images/Logo.png" />
+    <link rel="icon" href="/Images/Logo.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -73,7 +73,7 @@
           <a href="/HTML/Login.html" class="Login-button fw-medium">Login</a>
         </div>
       </nav>
-
+          <!--Header body part-->
       <section class="part-section">
         <div class="container">
           <div class="row g-5">
@@ -81,15 +81,13 @@
               <div class="col-12 col-lg-6">
                 <h1 class="ms-5 mt-4 lh-sm">Welcome to <br />Vcare</h1>
                 <p class="p px-5 fw-medium">
-                  Find your doctor and make an <br />appoinment
+                  Find your doctor and make an <br />appointment
                 </p>
-                <a href="/HTML/appoinment.html">
+                <a href="/HTML/appointment.html">
                   <button
                     type="submit"
-                    class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow"
-                  >
-                    <!--Change of class btn to bttn-->
-                    Book an Appoinment
+                    class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow"> <!--Change class name btn to bttn-->
+                    Book an Appointment
                   </button>
                 </a>
               </div>
@@ -127,8 +125,8 @@
                   alt="Smiley doctor"
                 />
                 <div class="card-body">
-                  <h4 class="card-title">Book an appoinment with doctor.</h4>
-                  <a href="/HTML/appoinment.html">
+                  <h4 class="card-title">Book an appointment with doctor.</h4>
+                  <a href="/HTML/appointment.html">
                     <button type="button" class="btn btn-dark">
                       Consult Now
                     </button>
@@ -161,7 +159,7 @@
                   alt="Smiley doctor"
                 />
                 <div class="card-body">
-                  <h4 class="card-title">Book a physical appoinment.</h4>
+                  <h4 class="card-title">Book a physical appointment.</h4>
                   <a href="/HTML/Hospital.html">
                     <button type="button" class="btn btn-dark">
                       Book Now!
@@ -214,15 +212,17 @@
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
               <button type="button" class="btn btn-dark me-2 mt-5">
-                Calculate BMI
+                Calculate BMI      <!--Remaning to add link for Calculate BMI Button-->
               </button>
             </div>
           </div>
         </div>
       </div>
     </main>
+    
       <!--Footer Section-->
     <footer>
+      <!--For Social Media Information-->
       <div
         class="social-connect bg-primary text-white text-center rounded-top-3"
       >
@@ -265,11 +265,12 @@
           </div>
         </div>
       </div>
-
+        <!--Footer Body-->
       <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-4">
+              <a href="#" class="F-Body">
               <img
                 src="/Images/Logo.png"
                 alt="Logo"
@@ -277,6 +278,7 @@
                 height="100"
                 class="align-middle mb-2"
               />
+            </a>
               <span class="fs-5 fw-bold">Vcare</span>
             </div>
             <div class="col-12 col-md-4 text-center">
@@ -330,6 +332,7 @@
           </div>
         </div>
       </footer>
+          <!--Footer For CopyRight Section-->
       <div class="copyright bg-black text-white text-center py-2">
         &copy; 2024 Vcare
       </div>
