--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -3,7 +3,7 @@
 <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>Sign Up</title>
+            <title>Login</title>
             <link rel="stylesheet" href="/CSS/login.css" />
             <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,46 +16,31 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-none">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                <img
-                    src="/Images/Logo.png"
-                    alt="Logo"
-                    width="100"
-                    height="100"
-                    class="d-inline-block align-text-top"
-                />
-                </a>
-                <h2>Vcare</h2>
-                <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-                >
+              <a class="navbar-brand mx-auto" href="/HTML/index.html">
+                <img src="/Images/Logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top" />
+              </a>
+              <h2 class="mt-3">Vcare</h2>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link active fw-medium" aria-current="page" href="/HTML/index.html">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                    <a class="nav-link active fw-medium" aria-current="page" href="#Service"
-                        >Services</a
-                    >
-                    </li>
-
-                    <li class="nav-item">
-                    <a class="nav-link active fw-medium" aria-current="page" href="#">About</a>
-                    </li>
+                  </li>
+      
+                  <li class="nav-item">
+                    <a class="nav-link active  fw-medium" aria-current="page" href="#">Services</a>
+                  </li>
+      
+                  <li class="nav-item">
+                    <a class="nav-link active  fw-medium" aria-current="page" href="#">About</a>
+                  </li>
                 </ul>
-                </div>
+              </div>
             </div>
-            </nav>
+          </nav>
 
         <div class="container"> 
             <div class="d-flex justify-content-between">
@@ -121,5 +106,3 @@
             ></script>
         </body>
         </html>
-
-        !
