--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -48,22 +48,17 @@
                     <div class="form-group mb-2">
                         <input type="password" class="form-control rounded-4  px-3" id="password" placeholder="Password" required>
                     </div>
-                    <input type="checkbox">
-                    <label>Remember me</label><br><br>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary w-75 mt-3 rounded-5 fs-5">Login</button>
+                        <button type="button" class="btn btn-primary w-75 mt-3 rounded-5 fs-5" id="loginBtn">Login</button>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-light w-75 mt-3 rounded-5 fs-5">
-                            <img src="/Images/GoogleLogo.png" width="30px" alt=""> Sign in with google
-                        </button>
-                    </div>
+                    <h6 class="text-center mt-4">Don't have an account? <a href="/HTML/signUp.html">Signup</a></h6>
                 </form>
-                <h6 class="text-center mt-4">Don't have an account? <a href="/HTML/signUp.html">Signup</a></h6>
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="/JS/login.js"></script>
 </body>
 </html>
