--- a/HTML/index.html
+++ b/HTML/index.html
@@ -94,7 +94,7 @@
                 <p class="p px-5 fw-medium">
                   Find your doctor and make an <br />appoinment
                 </p>
-                <a href="/HTML/appoinment.html">
+                <a href="/HTML/appointment.html">
                   <button
                     type="submit"
                     class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow"
@@ -139,7 +139,7 @@
                 />
                 <div class="card-body">
                   <h4 class="card-title">Book an appoinment with doctor.</h4>
-                  <a href="/HTML/appoinment.html">
+                  <a href="/HTML/appointment.html">
                     <button type="button" class="btn btn-dark">
                       Consult Now
                     </button>
