--- a/HTML/History.html
+++ b/HTML/History.html
@@ -295,13 +295,13 @@
                 >
               </li>
               <li>
-                <a href="/HTML/appoinment.html" class="text-decoration-none text-white"
-                  >Online Appoinment</a
+                <a href="/HTML/appointment.html" class="text-decoration-none text-white"
+                  >Online Appointment</a
                 >
               </li>
               <li>
                 <a href="/HTML/Hospital.html" class="text-decoration-none text-white"
-                  >Physical Appoinment</a
+                  >Physical Appointment</a
                 >
               </li>
               <li>
