--- a/HTML/appointment.html
+++ b/HTML/appointment.html
@@ -82,9 +82,9 @@
         </div>
       </nav>
 
-      <div class="Appoinment container d-flex justify-content-center align-items-center rounded-5 mt-3">
+      <div class="Appoinment container d-flex justify-content-center align-items-center rounded-5">
         <div class="text-center ">
-          <h1 class="fw-semibold">Book an Appoinment</h1>
+          <h1 class="fw-semibold">Book an Appointment</h1>
         </div>
       </div>
     </header>
@@ -468,16 +468,16 @@
                 </li>
                 <li>
                   <a
-                    href="/HTML/appoinment.html"
+                    href="/HTML/appointment.html"
                     class="text-decoration-none text-white"
-                    >Online Appoinment</a
+                    >Online Appointment</a
                   >
                 </li>
                 <li>
                   <a
                     href="/HTML/Hospital.html"
                     class="text-decoration-none text-white"
-                    >Physical Appoinment</a
+                    >Physical Appointment</a
                   >
                 </li>
                 <li>
