--- a/HTML/Hospital.html
+++ b/HTML/Hospital.html
@@ -43,11 +43,15 @@
         <img src="/Images/profile-user.png" alt="Logo" width="25" height="25" class="user d-inline-block">
       </div>
     </nav>
-
+    <div class="Hospital container d-flex justify-content-center align-items-center rounded-5">
+      <div class="text-center ">
+        <h1 class="fw-semibold">Visit Hospital</h1>
+      </div>
+    </div>
   </header>
 
   <main>
-    <div class="container">
+    <div class="container mt-5">
       <!--First Row-->
       <div class="row">
         <div class="col-md-4">
@@ -56,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>        
+              <a href="#" class="btn btn-dark">Book Appointment</a>        
             </div>
           </div>
         </div>
@@ -66,7 +70,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -76,7 +80,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -89,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -99,7 +103,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -109,7 +113,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -122,7 +126,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -132,7 +136,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
@@ -142,7 +146,7 @@
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
               <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
-              <a href="#" class="btn btn-dark">Book Appoinment</a>
+              <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
