--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="icon" href="/Images/Logo.png">
+    <link rel="icon" href="/Images/Logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -70,10 +70,21 @@
               </li>
             </ul>
           </div>
-          <a href="/HTML/Login.html" class="Login-button fw-medium">Login</a>
+          <a href="/HTML/Login.html" class="Login-button fw-medium" id="login"
+            >Login</a
+          >
+          <div class="dropdown" id="userLogo">
+            <div class="d-flex justify-content-center mt-4" data-bs-toggle="dropdown">
+              <img src="/Images/man-2.png" alt="user" width="50" height="50" />
+            </div>
+            <p class="dropdown-toggle" data-bs-toggle="dropdown" style="font-size: 12px">Sushant</p>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Logout</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
-          <!--Header body part-->
+
       <section class="part-section">
         <div class="container">
           <div class="row g-5">
@@ -86,7 +97,9 @@
                 <a href="/HTML/appointment.html">
                   <button
                     type="submit"
-                    class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow"> <!--Change class name btn to bttn-->
+                    class="bttn btn-primary w-50 mt-3 ms-5 rounded-5 shadow"
+                  >
+                    <!--Change of class btn to bttn-->
                     Book an Appointment
                   </button>
                 </a>
@@ -179,7 +192,7 @@
                   <h4 class="card-title">Trace your medical history</h4>
                   <a href="/HTML/History.html">
                     <button type="button" class="btn btn-dark">View</button>
-                </a>
+                  </a>
                 </div>
               </div>
             </div>
@@ -211,18 +224,18 @@
               time and identify potential health risks.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-              <button type="button" class="btn btn-dark me-2 mt-5">
-                Calculate BMI      <!--Remaning to add link for Calculate BMI Button-->
-              </button>
+              <a href="/HTML/bmi.html">
+                <button type="button" class="btn btn-dark me-2 mt-5">
+                  Calculate BMI
+                </button>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </main>
-    
-      <!--Footer Section-->
+    <!--Footer Section-->
     <footer>
-      <!--For Social Media Information-->
       <div
         class="social-connect bg-primary text-white text-center rounded-top-3"
       >
@@ -234,43 +247,42 @@
               </p>
               <div class="d-flex justify-content-end align-items-center">
                 <a href="#">
-                <img
-                  src="/Images/facebook.png"
-                  alt="Facebook Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/facebook.png"
+                    alt="Facebook Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
                 <a href="#">
-                <img
-                  src="/Images/Linkedin.png"
-                  alt="Linkedin Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/Linkedin.png"
+                    alt="Linkedin Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
                 <a href="#">
-                <img
-                  src="/Images/instagram.png"
-                  alt="Instagram Icon"
-                  width="32"
-                  height="32"
-                  class="me-2 rounded-circle"
-                />
-              </a>
+                  <img
+                    src="/Images/instagram.png"
+                    alt="Instagram Icon"
+                    width="32"
+                    height="32"
+                    class="me-2 rounded-circle"
+                  />
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
-        <!--Footer Body-->
+
       <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-4">
-              <a href="#" class="F-Body">
               <img
                 src="/Images/Logo.png"
                 alt="Logo"
@@ -278,29 +290,36 @@
                 height="100"
                 class="align-middle mb-2"
               />
-            </a>
               <span class="fs-5 fw-bold">Vcare</span>
             </div>
             <div class="col-12 col-md-4 text-center">
               <h5 class="mb-3">Our Services</h5>
               <ul class="list-unstyled py-1">
                 <li>
-                  <a href="/HTML/Medicine.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/Medicine.html"
+                    class="text-decoration-none text-white"
                     >Medicine</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/appoinment.html" class="text-decoration-none text-white"
-                    >Online Appoinment</a
+                  <a
+                    href="/HTML/appointment.html"
+                    class="text-decoration-none text-white"
+                    >Online Appointment</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/Hospital.html" class="text-decoration-none text-white"
-                    >Physical Appoinment</a
+                  <a
+                    href="/HTML/Hospital.html"
+                    class="text-decoration-none text-white"
+                    >Physical Appointment</a
                   >
                 </li>
                 <li>
-                  <a href="/HTML/History.html" class="text-decoration-none text-white"
+                  <a
+                    href="/HTML/History.html"
+                    class="text-decoration-none text-white"
                     >Medical Records</a
                   >
                 </li>
@@ -332,7 +351,6 @@
           </div>
         </div>
       </footer>
-          <!--Footer For CopyRight Section-->
       <div class="copyright bg-black text-white text-center py-2">
         &copy; 2024 Vcare
       </div>
@@ -343,5 +361,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
+    <script src="/JS/index.js"></script>
   </body>
 </html>
