--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
-    <link rel="icon" href="/Images/Logo.png">
+    <link rel="icon" href="/Images/Logo.png" />
     <link rel="stylesheet" href="/CSS/signUp.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,9 +12,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="signUp.css" />
   </head>
-
   <body>
     <!--HEADER SECTION-->
     <nav class="navbar navbar-expand-lg bg-body-none">
@@ -43,17 +41,25 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active fw-medium" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link active fw-medium"
+                aria-current="page"
+                href="index.html"
+                >Home</a
+              >
             </li>
-
             <li class="nav-item">
-              <a class="nav-link active fw-medium" aria-current="page" href="#Service"
+              <a
+                class="nav-link active fw-medium"
+                aria-current="page"
+                href="#Service"
                 >Services</a
               >
             </li>
-
             <li class="nav-item">
-              <a class="nav-link active fw-medium" aria-current="page" href="#">About</a>
+              <a class="nav-link active fw-medium" aria-current="page" href="#"
+                >About</a
+              >
             </li>
           </ul>
         </div>
@@ -64,9 +70,7 @@
     <div class="container">
       <div class="d-flex justify-content-between">
         <div class="col-md-6">
-          <form
-            class="rounded-3 mx-auto px-5 py-5 w-75 signupForm"
-          >
+          <form class="rounded-3 mx-auto px-5 py-5 w-75 signupForm">
             <h2 class="text-center py-2">Sign Up</h2>
             <div class="form-group mb-2">
               <input
@@ -77,9 +81,9 @@
                 required
               />
             </div>
-            <div class="form-group mb-2 ">
+            <div class="form-group mb-2">
               <input
-                type="number"
+                type="text"
                 class="form-control rounded-4 px-3"
                 id="number"
                 placeholder="Phone Number"
@@ -89,7 +93,7 @@
             <div class="form-group mb-2">
               <input
                 type="email"
-                class="form-control rounded-4  px-3"
+                class="form-control rounded-4 px-3"
                 id="email"
                 placeholder="Enter your email"
                 required
@@ -98,7 +102,7 @@
             <div class="form-group mb-2">
               <input
                 type="password"
-                class="form-control rounded-4  px-3"
+                class="form-control rounded-4 px-3"
                 id="password"
                 placeholder="Password"
                 required
@@ -108,34 +112,31 @@
               <input
                 type="password"
                 class="form-control rounded-4 px-3"
-                id="Re-password"
+                id="confirm-password"
                 placeholder="Confirm Password"
                 required
               />
             </div>
-
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-primary w-75 mt-3 rounded-5 fs-5">
+              <button
+                type="button"
+                class="btn btn-primary w-75 mt-3 rounded-5 fs-5"
+                id="signUpBtn"
+              >
                 Sign Up
               </button>
             </div>
-
-            <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-light w-75 mt-3 rounded-5 fs-5">
-                <img src="/Images/GoogleLogo.png" width="30px" alt="" /> Sign in
-                with google
-              </button>
-            </div>
           </form>
-          <h6 class="text-center mt-4">Already have a account? <a href="/HTML/Login.html">Login</a</h6>
+          <h6 class="text-center mt-4">
+            Already have an account? <a href="/HTML/Login.html">Login</a>
+          </h6>
         </div>
-    
-        <div class="col-md-6">     <!-- d-flex justify-content-end for image on right -->
+        <div class="col-md-6">
           <img
             src="/Images/Medicine.png"
             class="img rounded-4"
             alt="Medical Image"
-           width="100%"
+            width="100%"
           />
         </div>
       </div>
@@ -146,5 +147,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="/JS/signup.js"></script>
   </body>
 </html>
